# document-intelligence-rag

./: START_HERE.md
docintel/: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  GETTING_STARTED.md  LEARNING_PATH.md  LICENSE  Makefile  README.md  docker-compose.yml  example_usage.py  pyproject.toml
docintel/.github/workflows/: ci.yml
docintel/scripts/: setup.bat  setup.sh
docintel/src/docintel/: __init__.py  api.py  cli.py  config.py  document_processor.py  embeddings.py  models.py  rag_engine.py  vector_store.py
docintel/tests/: __init__.py  test_document_processor.py
